--- a/.github/workflows/moodle.yml
+++ b/.github/workflows/moodle.yml
@@ -30,9 +30,25 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['7.4', '8.0']
-        moodle-branch: ['MOODLE_311_STABLE', 'MOODLE_400_STABLE', 'master']
-        database: [pgsql]
+        include:
+          - php: 8.0
+            moodle-branch: master
+            database: pgsql
+          - php: 8.0
+            moodle-branch: master
+            database: mariadb
+          - php: 8.0
+            moodle-branch: MOODLE_400_STABLE
+            database: pgsql
+          - php: 8.0
+            moodle-branch: MOODLE_311_STABLE
+            database: pgsql
+          - php: 7.4
+            moodle-branch: MOODLE_310_STABLE
+            database: pgsql
+          - php: 7.4
+            moodle-branch: MOODLE_39_STABLE
+            database: mariadb
 
     steps:
       - name: Check out repository code
